Closed
Bug 958491
Opened 12 years ago
Closed 12 years ago
WebGL bug in WebGLContext::GetFramebufferAttachmentParameter
Categories
(Core :: Graphics: CanvasWebGL, defect)
Core
Graphics: CanvasWebGL
Tracking
()
RESOLVED
FIXED
mozilla29
| Tracking | Status | |
|---|---|---|
| firefox26 | --- | unaffected |
| firefox27 | --- | unaffected |
| firefox28 | --- | affected |
| firefox29 | --- | affected |
| firefox-esr24 | --- | unaffected |
People
(Reporter: guillaume.abadie, Assigned: guillaume.abadie)
References
Details
Attachments
(3 files, 1 obsolete file)
|
3.47 KB,
patch
|
jgilbert
:
review+
|
Details | Diff | Splinter Review |
|
9.55 KB,
text/html
|
guillaume.abadie
:
feedback+
|
Details |
|
2.70 KB,
patch
|
jgilbert
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.9; rv:27.0) Gecko/20100101 Firefox/27.0 (Beta/Release)
Build ID: 20131216183647
Steps to reproduce:
Directly found when looking at the code. http://dxr.mozilla.org/mozilla-central/source/content/canvas/src/WebGLContextGL.cpp#1427
| Assignee | ||
Updated•12 years ago
|
| Assignee | ||
Comment 1•12 years ago
|
||
Attachment #8358365 -
Flags: review?(jgilbert)
Comment 2•12 years ago
|
||
Comment on attachment 8358365 [details] [diff] [review]
patch revision 1
Review of attachment 8358365 [details] [diff] [review]:
-----------------------------------------------------------------
Gross, nice catch!
Attachment #8358365 -
Flags: review?(jgilbert) → review+
| Assignee | ||
Comment 3•12 years ago
|
||
Pleasure is all mine! =)
https://hg.mozilla.org/integration/mozilla-inbound/rev/516316e7e0b1
| Assignee | ||
Comment 4•12 years ago
|
||
Unfortunately, I have not followed the Firefox aurora and beta development, but I guess at least one of them might have this issue. Don't you think Jeff?
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 5•12 years ago
|
||
That's pretty likely. Let me try to throw together a testcase.
Updated•12 years ago
|
Flags: needinfo?(jgilbert)
| Assignee | ||
Comment 6•12 years ago
|
||
easy, something like:
gl = create a WebGL 1 context
fbo = gl.createFramebuffer();
tex = gl.createTexture();
gl.bindTexture(gl.TEXTURE_2D, tex);
gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, 2, 2, 0, gl.RGBA, gl.UNSIGNED_BYTE, null);
gl.framebufferTexture2D(gl.FRAMEBUFFER, gl.COLOR_ATTACHEMENT0, fbo, gl.TEXTURE_2D, tex, 0);
gl.bindFramebuffer(gl.FRAMEBUFFER, fbo);
gl.getFramebufferAttachmentParameter(gl.FRAMEBUFFER, gl.COLOR_ATTACHEMENT0, 0x8210);
I just may have found another bug in the source code somewhere else...
Comment 7•12 years ago
|
||
Flags: needinfo?(jgilbert)
| Assignee | ||
Updated•12 years ago
|
Attachment #8358631 -
Flags: feedback+
Comment 8•12 years ago
|
||
Needs uplift to aurora28.
Updated•12 years ago
|
status-firefox26:
--- → unaffected
status-firefox27:
--- → unaffected
status-firefox28:
--- → affected
status-firefox29:
--- → affected
status-firefox-esr24:
--- → unaffected
Comment 9•12 years ago
|
||
Assignee: nobody → guillaume.abadie
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
Comment 11•12 years ago
|
||
Comment on attachment 8385034 [details] [diff] [review]
patch 2: add test
Review of attachment 8385034 [details] [diff] [review]:
-----------------------------------------------------------------
gtg. Only wonder what happened to test_webgl2_not_exposed.html, because I'm sure I reviewed that patch today.
::: content/canvas/test/webgl/non-conf-tests/mochitest.ini
@@ -10,5 @@
> [test_webgl_available.html]
> [test_webgl_conformance.html]
> [test_webgl_request_context.html]
> [test_webgl_request_mismatch.html]
> -[test_webgl2_not_exposed.html]
Why did this go?
Attachment #8385034 -
Flags: review?(dglastonbury) → review+
Comment 12•12 years ago
|
||
Comment on attachment 8385034 [details] [diff] [review]
patch 2: add test
Review of attachment 8385034 [details] [diff] [review]:
-----------------------------------------------------------------
::: content/canvas/test/webgl/non-conf-tests/mochitest.ini
@@ -10,5 @@
> [test_webgl_available.html]
> [test_webgl_conformance.html]
> [test_webgl_request_context.html]
> [test_webgl_request_mismatch.html]
> -[test_webgl2_not_exposed.html]
It's not supposed to go away, weird.
Comment 13•12 years ago
|
||
Comment 14•12 years ago
|
||
r=kamidphish
Attachment #8385034 -
Attachment is obsolete: true
Attachment #8386391 -
Flags: review+
Comment 15•12 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•