bug 958491 - Fixes bug in WebGLContext::GetFramebufferAttachmentParameter(gl.FRAMEBUFFER_ATTACHMENT_COLOR_ENCODING) when sRGB extension is not enabled - r=jgilbert